--- a/index.html
+++ b/index.html
@@ -113,7 +113,52 @@
             </div>
             <div class="modal__container">
                 <div class="modal__inner">
+                    <!-- Auth form -->
+                    <div class="auth-form">
+                        <div class="auth-form__header">
+                            <h3 class="auth-form__heading">Đăng kí</h3>
+                            <span class="auth-form__switch-btn">
+                                Đăng nhập
+                            </span>
+                        </div>
+                        <div class="auth-form__form">
+                            <div class="auth-form__group">
+                                <input type="text" class="auth-form__input" placeholder="Email của bạn">
+                            </div>
+                            <div class="auth-form__group">
+                                <input type="password" class="auth-form__input" placeholder="Mật khẩu của bạn">
+                            </div>
+                            <div class="auth-form__group">
+                                <input type="password" class="auth-form__input" placeholder="Nhập lại mật khẩu">
+                            </div>
+                        </div>
 
+                        <div class="auth-form__aside">
+                            <p class="auth-form__policy-text">
+                                Bằng việc đăng kí, bạn đã đồng ý với Shopee về
+                                <a class="auth-form__policy-link" href="">điều khoản dịch vụ</a> &
+                                <a class="auth-form__policy-link" href="">chính sách bảo mật</a>
+                            </p>
+                        </div>
+
+                        <div class="auth-form__controls">
+                            <button class="btn">TRỞ LẠI</button>
+                            <button class="btn btn--primary">ĐĂNG KÍ</button>
+                        </div>
+
+                        <div class="auth-form__socials">
+                            <a href="" class="btn btn--with-icon">
+                                <i class="fab fa-facebook-square"></i>
+                                
+                                Kết nối với Facebook
+                            </a>
+                            <a href="" class="btn btn--with-icon">
+                                
+                                <i class="fab fa-google"></i>
+                                Kết nối với Google
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
