--- a/index.html
+++ b/index.html
@@ -144,8 +144,84 @@
                             <i class="header__search-btn-icon fas fa-search"></i>
                         </button>
                     </div>
+
+
+                    <!-- CART HEADER -->
                     <div class="header__cart">
-                        <i class="header__cart-icon fas fa-shopping-cart"></i>
+                        <div class="header__cart-icon-wrap">
+                            <i class="header__cart-icon fas fa-shopping-cart"></i>
+                            <span class="header__cart-icon-badge">
+                                3
+                            </span>
+                            <!-- No cart: header__cart-list--no-cart -->
+                            <div class="header__cart-list">
+                                <!-- No cart -->
+                                <img src="./assets/img/logo_v2.png" alt="" class="header__cart-no-cart-img">
+                                <span class="header__cart-list-no-cart-label">
+                                    Chưa có sản phẩm
+                                </span>
+                                <!-- End no cart -->
+
+                                <!-- Has cart -->
+
+                                <h4 class="header__cart-heading">Sản phẩm đã thêm</h4>
+                                <ul class="header__cart-list-item">
+                                    <li class="header__cart-item">
+                                        <img src="./assets/img/den_.jpg" alt="" class="header__cart-item-img">
+                                        <div class="header__cart-item-info">
+                                            <div class="header__cart-item-name-price">
+                                                <h5 class="header__cart-item-name">Áo Polo Pique thế hệ mới</h5>
+                                                <div class="header__cart-price-wrap">
+                                                    <span class="header__cart-item-price">299.000đ</span>
+                                                    <span class="header__cart-item-multiply">x</span>
+                                                    <span class="header__cart-item-quantity">1</span>
+                                                </div>
+                                            </div>
+                                            <div class="header__cart-item-des-btn">
+                                                <span class="header__cart-item-description">Áo thun cực chất</span>
+                                                <span class="header__cart-item-delete">Xóa</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="header__cart-item">
+                                        <img src="./assets/img/den_.jpg" alt="" class="header__cart-item-img">
+                                        <div class="header__cart-item-info">
+                                            <div class="header__cart-item-name-price">
+                                                <h5 class="header__cart-item-name">Áo Polo Pique thế hệ mới</h5>
+                                                <div class="header__cart-price-wrap">
+                                                    <span class="header__cart-item-price">299.000đ</span>
+                                                    <span class="header__cart-item-multiply">x</span>
+                                                    <span class="header__cart-item-quantity">1</span>
+                                                </div>
+                                            </div>
+                                            <div class="header__cart-item-des-btn">
+                                                <span class="header__cart-item-description">Áo thun cực chất</span>
+                                                <span class="header__cart-item-delete">Xóa</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="header__cart-item">
+                                        <img src="./assets/img/den_.jpg" alt="" class="header__cart-item-img">
+                                        <div class="header__cart-item-info">
+                                            <div class="header__cart-item-name-price">
+                                                <h5 class="header__cart-item-name">Áo Polo Pique thế hệ mới</h5>
+                                                <div class="header__cart-price-wrap">
+                                                    <span class="header__cart-item-price">299.000đ</span>
+                                                    <span class="header__cart-item-multiply">x</span>
+                                                    <span class="header__cart-item-quantity">1</span>
+                                                </div>
+                                            </div>
+                                            <div class="header__cart-item-des-btn">
+                                                <span class="header__cart-item-description">Áo thun cực chất</span>
+                                                <span class="header__cart-item-delete">Xóa</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <button class="header__cart-route-cart btn btn--primary">Xem giỏ hàng</button>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
