--- a/index.html
+++ b/index.html
@@ -94,8 +94,31 @@
                                 Trợ giúp
                             </a>
                         </li>
-                        <li class="header__navbar-item header__navbar-item--bold header__navbar-item--separate">Đăng kí</li>
-                        <li class="header__navbar-item header__navbar-item--bold">Đăng nhập</li>
+                        <!-- No login -->
+                        <!-- <li class="header__navbar-item header__navbar-item--bold header__navbar-item--separate">Đăng kí</li>
+                        <li class="header__navbar-item header__navbar-item--bold">Đăng nhập</li> -->
+                        <!-- Login -->
+
+                        <li class="header__navbar-item header__navbar-user">
+                            <img src="./assets/img/photo.png" alt="" class="header__navbar-user-avatar">
+                            <span class="header__navbar-user-name">Nguyễn Phan Du</span>
+
+                            <ul class="header__navbar-user-menu">
+                                <li class="header__navbar-user-item">
+                                    <a href="#">Tài khoản của tôi</a>
+                                </li>
+                                <li class="header__navbar-user-item">
+                                    <a href="#">Địa chỉ của tôi</a>
+                                </li>
+                                <li class="header__navbar-user-item">
+                                    <a href="#">Đơn hàng của tôi</a>
+                                </li>
+                                <li class="header__navbar-user-item">
+                                    <a href="#">Đăng xuất</a>
+                                </li>
+                            </ul>
+                        </li>
+
                     </ul>
                 </nav>
                 <!-- HEADER WITH SEARCH -->
