--- a/index.html
+++ b/index.html
@@ -252,29 +252,38 @@
             </div>
         </header>
         <div class="container">
-            <nav class="category">
-                <h3 class="category__heading">
-                    <i class="fas fa-list-ul"></i>
-                    Danh mục
-                </h3>
-                <ul class="category-list">
-                    <li class="category-item category-item--active">
-                        <a href="" class="category-item__link">
-                            Áo Polo Pique
-                        </a>
-                    </li>
-                    <li class="category-item">
-                        <a href="" class="category-item__link">
-                            Áo khoác
-                        </a>
-                    </li>
-                    <li class="category-item">
-                        <a href="" class="category-item__link">
-                            Áo thể thao
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="grid">
+                <div class="grid__row">
+                    <div class="grid__column-2">
+                        <nav class="category">
+                            <h3 class="category__heading">
+                                <i class="fas fa-list-ul"></i>
+                                Danh mục
+                            </h3>
+                            <ul class="category-list">
+                                <li class="category-item category-item--active">
+                                    <a href="" class="category-item__link">
+                                        Áo Polo Pique
+                                    </a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="" class="category-item__link">
+                                        Áo khoác
+                                    </a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="" class="category-item__link">
+                                        Áo thể thao
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+    
+                    <div class="grid__column-10"></div>
+                </div>
+            </div>
+            
         </div>
         <footer class="footer">
 
