--- a/index.html
+++ b/index.html
@@ -283,13 +283,22 @@
                     <div class="grid__column-10">
                         <div class="home-filter">
                             <span class="home-filter__label">Sắp xếp theo</span>
-                            <button class="btn">Phổ biến</button>
-                            <button class="btn btn--primary">Mới nhất</button>
-                            <button class="btn">Bán chạy</button>
+                            <button class="btn home-filter__btn">Phổ biến</button>
+                            <button class="btn home-filter__btn btn--primary">Mới nhất</button>
+                            <button class="btn home-filter__btn">Bán chạy</button>
 
                             <div class="select-input">
                                 <span class="select-input__label">Giá</span>
-                                <i class="fas fa-chevron-down"></i>
+                                <i class="fas fa-chevron-down select-input__icon"></i>
+                                <!-- List option -->
+                                <ul class="select-input__list">
+                                    <li class="select-input__item">
+                                        <a href="#" class="select-input__link">Giá: Thấp đến cao</a>
+                                    </li>
+                                    <li class="select-input__item">
+                                        <a href="#" class="select-input__link">Giá: Cao đến thấp</a>
+                                    </li>
+                                </ul>
                             </div>
 
                             <div class="home-filter__page">
@@ -297,11 +306,11 @@
                                     <span class="home-filter__page-current">1</span>/14
                                 </span>
                                 <div class="home-filter__page-controll">
-                                    <a href="#" class="home-filter__page-btn">
-                                        <i class="fas fa-chevron-left"></i>
+                                    <a href="#" class="home-filter__page-btn home-filter__page-btn--disable">
+                                        <i class="home-filter__page-icon fas fa-chevron-left"></i>
                                     </a>
                                     <a href="#" class="home-filter__page-btn">
-                                        <i class="fas fa-chevron-right"></i>
+                                        <i class="home-filter__page-icon fas fa-chevron-right"></i>
                                     </a>
                                 </div>
                             </div>
