--- a/index.html
+++ b/index.html
@@ -315,6 +315,51 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="home-product">
+                            <div class="grid__row">
+                                <div class="grid__column-2">
+                                    <div class="home-product-item">
+                                        <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/ac4b4aaa26c8267383b95567f605a613_tn);">      
+                                        </div>
+                                        <h4 class="home-product-item__name">Áo thun nam dài tay Cotton Compact phiên bản Premium in Care&Share màu đen (Nhập TOTE - Tặng túi vải Canvas khi mua 2 áo)</h4>
+                                        <div class="home-product-item__price">
+                                            <span class="home-product-item__price--old">558.000đ</span>
+                                            <span class="home-product-item__price--current">399.000đ</span>
+                                        </div>
+
+                                        <div class="home-product-item__action">
+                                            <span class="home-product-item__like">
+                                                <i class="far fa-heart"></i>
+                                                <!-- <i class="fas fa-heart"></i> -->
+                                            </span>
+                                            <div class="home-product-item__ratting">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                        </div>
+
+                                        <div class="home-product-item__origin">
+                                            <span class="home-product-item__brand">Coolmate</span>
+                                            <span class="home-product-item__origin-name">Việt Nam</span>
+                                        </div>
+
+                                        <div class="home-product-item__favourate">
+                                            <i class="fas fa-check"></i>
+                                            Yêu thích
+                                        </div>
+
+                                        <div class="home-product-item__sale-off">
+                                            <span class="home-product-item__sale-off-value">10%</span>
+                                            <span class="home-product-item__sale-off-label">GIẢM</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
