--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                         <img src="./assets/img/den_.jpg" alt="" class="header__cart-item-img">
                                         <div class="header__cart-item-info">
                                             <div class="header__cart-item-name-price">
-                                                <h5 class="header__cart-item-name">Áo Polo Pique thế hệ mới</h5>
+                                                <h5 class="header__cart-item-name">Áo thun nam dài tay Cotton Compact phiên bản Premium in Care&Share màu đen (Nhập TOTE - Tặng túi vải Canvas khi mua 2 áo)</h5>
                                                 <div class="header__cart-price-wrap">
                                                     <span class="header__cart-item-price">299.000đ</span>
                                                     <span class="header__cart-item-multiply">x</span>
@@ -257,7 +257,6 @@
                     <div class="grid__column-2">
                         <nav class="category">
                             <h3 class="category__heading">
-                                <i class="category__heading-icon fas fa-list-ul"></i>
                                 Danh mục
                             </h3>
                             <ul class="category-list">
