--- a/index.html
+++ b/index.html
@@ -803,7 +803,95 @@
             
         </div>
         <footer class="footer">
-
+            <div class="grid">
+                <div class="grid__row">
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__heading">Chăm sóc khách hàng</h3>
+                        <ul class="footer-list">
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Trung tâm trợ giúp</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Coolmate shop</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Hướng dẫn mua hàng</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__heading">Giới thiệu</h3>
+                        <ul class="footer-list"></ul>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Giới thiệu</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Tuyển dụng</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Điều khoản</a>
+                            </li>
+                        </ul>   
+                    </div>
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__heading">Theo dõi</h3>
+                        <ul class="footer-list"></ul>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">
+                                    <i class="footer-item__icon fab fa-facebook"></i>
+                                    Facebook
+                                </a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">
+                                    <i class="footer-item__icon fab fa-instagram-square"></i>
+                                    Instagram
+                                </a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">
+                                    <i class="footer-item__icon fab fa-google"></i>
+                                    Gmail
+                                </a>
+                            </li>
+                        </ul>   
+                    </div>
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__heading">Danh mục</h3>
+                        <ul class="footer-list"></ul>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Áo thun</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Quần</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Phụ kiện</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="" class="footer-item__link">Tất vớ</a>
+                            </li>
+                        </ul>   
+                    </div>
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__heading">Vào cửa hàng trên ứng dụng</h3>
+                        <div class="footer__download">
+                            <img src="./assets/img/f184c0b68a2d385feb5d70a76396230b.png" alt="" class="footer__download-qr">
+                            <div class="footer__download-apps">
+                                <a href=""><img src="./assets/img/ch_play.png" alt="" class="footer__download-apps-img"></a>
+                                <a href=""><img src="./assets/img/app_store.png" alt="" class="footer__download-apps-img"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__bottom">
+                <div class="grid">
+                    <div class="grid__row">
+                        <p class="footer__copyright">&copy 2021 - Nguyễn Phan Du</p>
+                    </div>
+                </div>
+            </div>
         </footer>
         <!-- Modal layout -->
         <!-- <div class="modal">
